# redact-safe

./: .gitattributes  .gitignore  PROMPT.md  activity.md  index.html  package-lock.json  package.json  prd.md  ralph.sh
.claude/: settings.json
docs/: design.md
python-worker/: bbox_normalizer.py  coord_utils.py  detection_rules.yaml  name_detector.py  ocr_pipeline.py  pdf_sanitizer.py  pii_detector.py  requirements.txt  worker.py  worker.spec
python-worker/custom_rules/: README.md  example_custom_rules.yaml
python-worker/tests/: test_bbox_normalizer.py  test_coord_utils.py  test_custom_rules.py  test_name_detector.py  test_pii_detector.py
src/: main.js  masking-overlay.js  pdf-viewer.js  styles.css  undo-manager.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audit_log.rs  document_state.rs  lib.rs  python_worker.rs
src/ui/: app-state.js  dialogs.js  menu.js  sidebar.js  toast.js
